--- a/Routine/Routine.css
+++ b/Routine/Routine.css
@@ -10,7 +10,7 @@ body {
 
 /* Header */
 header {
-    background-color: #0056b3;
+    background-color: #003167;
     color: white;
     text-align: center;
     padding: 20px 0;
